# LidarRecognizeBalls_In_Basket

./: CMakeLists.txt  README.md  main.cpp
SCRIPT/: manager.py  start.sh
SCRIPT/yztpyfun/: __init__.py  base.py  pclass.py
code/PcProcess/: pcCommon.hpp  pcDetect.hpp  pcFilter.hpp
code/livoxToPc/: getPC.hpp
communication/: .gitignore
communication/code/main/: main.cpp
recognize/: CMakeLists.txt  main.cpp
recognize/code/: detect.py  lidar.txt
recognize/code/PcProcess/: pcCommon.hpp  pcDetect.hpp  pcFilter.hpp
recognize/code/livoxToPc/: getPC.hpp
recognize/code/tcp/: tcp.cpp
recognize/virtual_lidar/: main.cpp
